Add environment variables to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,13 @@
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_DB_URL=
+BRIDGE_API_KEY=
+BRIDGE_BASE_URL=
+BRIDGE_WEBHOOK_PUBLIC_KEY=
+ORCH_EXTERNAL_ACCOUNT_URL=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+CHECKOUT_SUCCESS_URL=
+CHECKOUT_CANCEL_URL=
 
